--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,17 +2,44 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: 24px;
   align-items: center;
-  border: 2px solid black;
-  padding: 50px 100px;
+  font-weight: bold;
+  border: 5px solid #7b68ee;
+  padding: 20px 100px;
+  border-radius: 20px;
+  color: #8000ff;
 }
 .form_btn {
-  width: 120px;
+  width: 140px;
+  padding: 8px;
+  border-radius: 20px;
+  border: 2px solid #7b68ee;
+  color: #8000ff;
+  font-size: 18px;
+  font-family: 'Oxygen';
+  font-weight: 600;
+  &:hover,
+  :focus {
+    background-color: #8000ff;
+    color: white;
+  }
 }
 .label {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  & input {
+    border: 2px solid #7b68ee;
+    color: #8000ff;
+    width: 300px;
+    height: 30px;
+    outline: none;
+    border-radius: 20px;
+    padding-left: 30px;
+    &:hover {
+      background-color: #8000ff;
+      color: white;
+    }
+  }
 }
