--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -2,6 +2,21 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  font-weight: 500;
-  font-size: 18px;
+  font-size: 24px;
+  align-items: left;
+  font-weight: bold;
+
+  & input {
+    border: 2px solid #7b68ee;
+    width: 300px;
+    height: 30px;
+    outline: none;
+    color: #8000ff;
+    border-radius: 20px;
+    padding-left: 30px;
+    &:hover {
+      background-color: #8000ff;
+      color: white;
+    }
+  }
 }
