--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -7,16 +7,13 @@
   font-weight: bold;
 
   & input {
-    border: 2px solid #7b68ee;
+    border: 2px solid #da5f2d;
+    box-shadow: 5px 5px 5px #da5f2ded;
     width: 300px;
     height: 30px;
     outline: none;
-    color: #8000ff;
+    color: #ad3e02;
     border-radius: 20px;
     padding-left: 30px;
-    &:hover {
-      background-color: #8000ff;
-      color: white;
-    }
   }
 }
